--- a/css/evidencias.css
+++ b/css/evidencias.css
@@ -4,14 +4,14 @@
     font-family:  Verdana y Myriad Pro;
 }
 body{
-    background:  #238276;
+    background: white ;
 }
 /*----------- Menu de la pagina-------*/
 .menu{
     position: absolute;
-    background-color:   #fc7323;
+    background:rgb(35, 133, 118);
     height: 52px;
-    width: 82.7%;
+    width: 87.28%;
     margin-top: 0px;
     margin-left: 172px;
     list-style: none;
@@ -40,9 +40,9 @@ li a{
 
 /*--------interfaz del intructor y avatar -----*/
 .instructor{
-background-color: #e7e7e7;
+background-color:rgb(226, 226, 226);
 width: 170px;
-height: 700px;
+height: 600px;
 border :1px solid black;
 padding: 0px;
 margin-top: 0px;
@@ -68,10 +68,10 @@ color: black;
 
 .tichert{
     margin-top: 0px;
-    background:  #fc7323;
+    background:rgb(89, 181, 72) ;
     width: 170px;
     height: 50px;
-    
+    border:1px solid black;
 }
 
 #segir{
@@ -120,7 +120,7 @@ color: black;
     border-radius: 15px;
     margin-left: 26%;
     position: absolute; 
-    margin-top: -63%;
+    margin-top: -36%;
     background-color: #ffffff; 
 }
 
@@ -129,6 +129,7 @@ color: black;
 .conteiner > span{
     margin-left: 30px;
     font-size: 20px;
+    padding: 2px;
 }
 
 .boton{
@@ -159,24 +160,25 @@ button:hover{
     width: 200px;
     height: 400px;
     margin-left: 75%;
-    margin-top:-63%;
+    margin-top:-43%;
   
    
 }
 
 .buscar{
-    margin-top: 12px;
-    background: #ffffff;
-    height: 100px;
+    margin-top: 102px;
+    background: rgb(184, 182, 182);
+    height: 50px;
     width: 170px;
     border-radius: 10px;
+    color: honeydew;
     
     
     
 }
 
 input{
-   margin-top: 40px;
+   margin-top: 10px;
    align-items: center;
    margin-left: 20px;
    width: 120px;
@@ -235,38 +237,40 @@ td{
 }
 /*-------footer o pie de la pagina-------*/
 
-#pie-pagina{
-    background-color: #fc7323;
-    
-}
 
-footer{
+.pie{
     position: relative;
-    margin-top: 150px;
-    height: auto;
-}
-
-ul{
-   
-    list-style: none;
-    color: #ffffff;
-    margin-top: 120px;
-}
-
-#imagen{
-    margin-top: -30px;
-    width: 100px;
+    margin-top:31.56px;
+    width: 100%;
     height: 100px;
-    margin-left: 800px;
+    background:rgb(35, 133, 118);
+    display: flex;
+    align-items: flex-end;
+    border-top: 2px solid #fff;
+    margin-left: 0px;
+   
 }
-@media (max-width:750px){
-    form {
-        width: 75%;
-    }
-}
-@media (max-width:48px){
-    form {
-        width: 90%;
-    }
-}
+.pie img
+{
+    margin-left: 20px;
     
+}
+.info 
+{
+   border-left: solid var(--white);
+   
+}
+.info p
+{
+    font-size: 13px;
+    color: #fff;
+    font-family: Verdana;
+    margin: 5px;
+    margin-left: 30px;
+    font-family: Verdana;
+}
+.icons
+{
+    margin-left: 380px;
+    
+}    
