--- a/css/index.css
+++ b/css/index.css
@@ -1,36 +1,99 @@
-.pie{
-    position: relative;
-    margin-top: 10px;
-    width: 100%;
-    height: 100px;
-    background:rgb(35, 133, 118);
-    display: flex;
-    align-items: flex-end;
-    border-top: 2px solid #fff;
-    margin-left: 0px;
-   
-}
-.pie img
-{
-    margin-left: 20px;
+    body
+    {
+        margin: 0px;
+        padding: 0px;
+        font-family: Verdana;
+        background-image: url(../imagen/fondo.jpg);
+        background-repeat: no-repeat;
+    }
+
+       /* encabezado*/
+    header
+    {
+        width: 100%;
+        height: 80px;
+        background-color:rgb(35, 133, 118);
+        display: flex;
+    }
+
+    .imgmenu img
+    {
+        margin-top:8% ;
+        width:18%;
+        height: 45%;
+        cursor: pointer;
+    }
+    .title
+    {
+        width: 90%;
+        margin-left: 16%;
+        color: white;
+    }
+    .logoo img
+    {
+        margin-left: 45%;
+        margin-top: 3%;
+        width: 50%;
+        height: 80%;
+    }
+
+    /*contenido*/
+    .contenido
+    {
+        display: flex;
+        width: 100%;
+    }
     
-}
-.info 
-{
-   border-left: solid var(--white);
-   
-}
-.info p
-{
-    font-size: 13px;
-    color: #fff;
-    font-family: Verdana;
-    margin: 5px;
-    margin-left: 30px;
-    font-family: Verdana;
-}
-.icons
-{
-    margin-left: 380px;
+
+    .video
+    {
+        margin: 2% 2px 0px  30%;
+        width: 60%;
+    }
     
-}
+    .video iframe
+    {
+        width:99%;
+        height:456px;
+    }
+
+    /*pie de pagina*/
+
+    .pie{
+        position: relative;
+        margin-top: 11px;
+        width: 100%;
+        height: 80px;
+        background:rgb(35, 133, 118);
+        display: flex;
+        align-items: flex-end;
+        margin-left: 0px;
+    
+    }
+    
+    .imgpie
+    {
+        margin: 2% 1% 2px 2%;
+        border-right: solid white;
+        width: 7%;
+    }
+    .imgpie img
+    {
+      margin: 2% 2%;
+        width: 78%;
+        height: 60px;
+    }
+    .info 
+    {
+        margin-right: 10px;
+        width: 100%;
+        height: 84%;
+        text-align: end;
+    }
+    .info p
+    {
+        font-size: 13px;
+        color: #fff;
+       
+    }
+   
